Fix scrolling on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ body {
     /* USER002: Prevent user from scrolling between full-page sections */
     
     overflow: hidden;
+    
+    /* USER002: Fix scrolling on mobile devices */
+    
+    position: fixed;
 }
 
 /* Google Components */
